bpo-20524: adds better error message for `.format()`